# ten-vad-rs

./: .gitignore  Cargo.toml  PERFORMANCE_SUMMARY.md  README.md  benchmark.md  build.rs
.github/workflows/: publish.yml  rust.yml
benches/: vad_benchmark.rs
examples/: advanced_analysis.rs  create_stereo_test.rs  create_test_wav.rs  embedded_model_vad.rs  mic_vad.rs  microphone_vad.rs  onnx_inference_demo.rs  pr_curve.rs  realtime_vad_demo.rs  speaker_vad.rs  test_errors.rs  threshold_comparison.rs  wav_file_vad.rs
src/: audio_segment.rs  biquad.rs  buffer.rs  error.rs  lib.rs  main.rs  onnx.rs  pitch_est.rs  utils.rs
