[package]
name = "ten-vad-rs"
version = "0.1.4"
edition = "2024"
description = "Rust library for working with the TEN VAD ONNX model."
authors = ["Fu Wang <wangfu91@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wangfu91/ten-vad-rs"
keywords = ["vad", "voice", "audio", "detection", "speech"]
categories = ["multimedia::audio", "science"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
ndarray = "0.16.1"
ort = "=2.0.0-rc.10"
rubato = "0.16.2"
thiserror = "2.0.12"
rustfft = "6.2.0"
log = "0.4.27"

[dev-dependencies]
hound = "3.5.1"
cpal = "0.16.0"
anyhow = "1.0.98"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vad_benchmark"
harness = false
